Vertically center all sortable table rows
Our new table style vertically top aligns all table cells. Sortable tables are one liners and often have input fields in them. In conjuntion with the sortable handle this leads to erroneous looking UI.

--- a/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
@@ -3,6 +3,10 @@ table {
   @extend .table;
   border-spacing: 0;
 
+  &.sortable td {
+    vertical-align: middle;
+  }
+
   th, td {
     text-overflow: ellipsis;
 
